handle scrollbar giving wrong position fixed offsets

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,12 +1,10 @@
 .hover-image {
-  position: absolute;
+  position: fixed;
   display: none;
   margin: 0;
   padding: 0;
   z-index: 1000;
   img {
-    max-width: 100%;
-    max-height: 100%;
     border: 0;
   }
 }
