--- a/test/test.css
+++ b/test/test.css
@@ -3,3 +3,11 @@
 	bottom: 15px;
 	right: 15px;
 }
+
+.tac {
+	text-align: center;
+}
+
+.spacer {
+	padding-top: 200px;
+}
